<resources>
    <string name="app_name">HelloBookstore</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tip_username">请输入帐号</string>
    <string name="tip_password">请输入密码</string>
    <string name="tip_password_repeat">请再次输入密码</string>
    <string name="tip_email">请输入邮箱地址</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
</resources>
