<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/username_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="text"
        android:hint="@string/tip_username"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/password_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_signup"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textPassword"
        android:hint="@string/tip_password"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/password_signup_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_signup"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textPassword"
        android:hint="@string/tip_password_repeat"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/email_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_signup_repeat"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textEmailAddress"
        android:hint="@string/tip_email"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_signup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        android:text="@string/submit"
        android:textSize="20sp"
        android:layout_marginStart="80dp" />
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_signup"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:layout_marginEnd="80dp"
        android:text="@string/cancel"
        android:textSize="20sp" />
</RelativeLayout>